# cairn

./: .gitignore  MODEL_ARCHITECTURE.md  README.md  pyproject.toml
data/finetune_ready/: cairn_distillation_train.jsonl  cairn_triage_train.jsonl  calibration_sft.jsonl  medqa_triage_sft.jsonl  teacher_distillation.jsonl
data/finetune_ready/triage_sft_dataset/: dataset_info.json  state.json
models/gguf/: CairnModelfile
notebooks/: cairn_finetune_A100.ipynb  cairn_finetune_gpu_1x_gh200.ipynb
scripts/: download_onsides.py  generate_distillation_data.py  generate_triage_data.py  prepare_finetune.py  train_unsloth.py
src/: __init__.py  app.py  cli.py  config.py
src/agent/: executor.py  tools.py  triage.py
src/devices/: ble_reader.py
src/models/: cascade.py  whisper.py
src/safety/: drug_check.py  gate.py  vital_check.py
src/sync/: remote.py  store.py
tests/: test_gate.py  test_safety.py  test_store.py
